# clover2

./: '  .clo  .gitattributes  .travis.yml  1  2q  :q  :wq  Array.s  Bool.s  Buffer.s  Byte.clcl  Byte.s  C.clcl  CGI.clcl  CHANGELOG  CLParser.clcl  CLang.clcl  CLibrary.clcl  CStruct.c  CStructTest  CStructTest.clcl  CStructTest.ll2  Char.s  ClassA.oclcl  ClassF.ll  Clover.clcl  Clover.s  Command.clc  Command.clcl  Command.s  Container.clc  Container.clcl  Directory.s  Double.s  EqualableArray.s  EqualableList.s  Exception.clcl  ExtendedString.clc  ExtensionClassTest.cl  (+177 more)
.pc/: applied-patches
app-sample/mfiler5/: Fundamental.clcl  Makefile.in  config.status  configure  configure.in  mf1app.clcl  mf2win.clcl  mf3isearch.clcl  mf4vd.clcl  mf5  mfiler5.cl  update_mfiler5.sh
app-sample/vicl/: .swp  CLParser.clcl  Fundamental.clcl  Makefile.in  README.md  TODO  a  a.c  a.cl  a.clcl  a.js  a.jscl  a.ojscl  a.txt  aaa  b.c  b.cl  b.clcl  c.cl  c.clcl  config.status  configure  configure.in  gdb-test  update_vicl.sh  valgrind-test.sh  vicl  vicl10VisualMode.clcl  vicl10VisualMode.clcl.swp  vicl11Undo.clcl  vicl12grave.clcl  vicl13dot.clcl  vicl14Completion.clcl  vicl15CCompletion.clcl  vicl16VVisual.clcl  vicl17Macro.clcl  vicl18Range.clcl  vicl19Signal.clcl  vicl1App.clcl  vicl20Backup.clcl  (+15 more)
app-sample/vicl/dir/: a.cl
autom4te.cache/: output.0  requests  traces.0
clover2/: CGI.clcl  CHANGELOG  CLParser.clcl  Command.clcl  File.clcl  Fundamental.clcl  LICENSE  Makefile.in  MyOwnLibrary.clcl  Range.clcl  Reflection.clcl  Socket.clcl  String.clcl  SystemCalls.clcl  TODO  a.cl  aaa  abc  bbb  compile-test-code.sh  config.h.in  d.txt  ext.clcl  g.cl  make_arm_el.sh  moveVarDecls.hs  server1.c  thread_debug.cl
clover2/code/: AndAndOrOrTest.clcl  AnonymousTest2.clcl  ArrayTest.clcl  ArrayTest3.clcl  ArrayTest4.clcl  BlockTest.clcl  BlockTest3.clcl  BlockTest4.clcl  BlockVarTest.clcl  BufferTest.clcl  CArrayTest.clcl  CGITest.clcl  ClassFieldAndFieldTest.clcl  ClassMethodTest.clcl  CloneTest.clcl  CommandTest.clcl  DelegateTest.clcl  DependencyTest.clcl  DirTest.clcl  E.clcl  EqualableArrayTest.clcl  FileTest.clcl  FloatTest.clcl  FunTest.clcl  GenericsTest.clcl  GenericsTest3.clcl  GenericsTest4.clcl  HashTest.clcl  HelloWorld.clcl  InheritTest.clcl  InterfaceTest.clcl  IsTest.clcl  LambdaArrayTest.clcl  ListTest.clcl  ListTest2.clcl  ListTest3.clcl  MethodBlock.clcl  MethodGenericsTest.clcl  MethodInternalTest.clcl  ModuleTest.clcl  (+39 more)
clover2/debian/: README.Debian  changelog  clover2.1  clover2.cron.d.ex  clover2.doc-base.EX  control  debhelper-build-stamp  files  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  prerm.ex  rules
clover2/examples/: Hello.cl  Hello2.cl  Makefile  a.c  fun.cl
clover2/ext/: hello.c
clover2/manual/: Home-en.md  Home.md  anonymous-en.md  buffer.md  clover-en.md  collection-en.md  collection.md  command-en.md  contribution.md  directory-en.md  directory.md  extension.md  lambda-en.md  libraries-en.md  libraries.md  object-en.md  path-en.md  pointer.md  regex-en.md  release_note.md  string-en.md  syntax.md  system.md  thread.md  to_html.sh  typing-en.md  usage-en.md
clover2/src/: alignment.c  bool.c  buffer.c  byte.c  carray.c  cast.c  char.c  class_clover.c  class_clover_runtime.c  class_compiler.c  class_parser.c  class_thread.c  code.c  common.h  compiler.c  heap.c  integer.c  interpreter.c  jit_bop.cpp  jit_cast.cpp  jit_common.hpp  jit_compile_method.cpp  jit_debug_runtime.cpp  jit_declare.cpp  jit_eqop.cpp  jit_method_call.cpp  jit_runtime.cpp  jit_sub.cpp  klass_compile_time.c  macros.h  main.c  module.c  native_method.c  (+13 more)
code/: AllocSize.clcl  AndAndOrOrTest.clcl  AnonymousTest.clcl  ArrayTest.clcl  ArrayTest2.clcl  ArrayTest5.clcl  BlockTest.clcl  BlockTest2.clcl  BlockTest5.clcl  BoolTest.clcl  BufferTest.clcl  ByteTest.clcl  CFFI  CFFI.bc  CFFI.cl  CFFI.ll  CFFI.s  CFFITest.clcl  CStruct.c  CStruct.h  CStructTest.clcl  CastTest.clcl  CharTest.clcl  ClassFieldAndFieldTest.clcl  CloneTest.clcl  ClosureTest.clcl  CommandTest.clcl  CommentTest.clcl  DefaultMethodArg.clcl  DefaultMethodArgTest.clcl  DelegateTest.clcl  E.cl  E.clcl  EFTest.clcl  EnumTest.clcl  FileTest.clcl  ForBlock.clcl  GCMemoryTest.clcl  GenericsTest2.clcl  GenericsTestX.clcl  (+207 more)
debian/: README.source  changelog  clover2.1  clover2.default.ex  clover2.substvars  control  copyright  files  install  manpage.sgml.ex  manpage.xml.ex  preinst.ex  rules  watch.ex
examples/: Dep1.clcl  Dep2.clc  Dep2.clcl  Hello.ocl  Hello2.clcl  Hello2.ocl  Hello2.oclcl  Makefile  dep_error.cl  fun.ocl
manual/: Home-en.md  Home.md  Range-en.md  Range.md  _Footer.md  _Sidebar.md  anonymous.md  boxing.md  buffer-en.md  buffer.md  changelog-en.md  changelog.md  clover.md  collection-en.md  collection.md  command-en.md  command.md  conclusion-en.md  conclusion.md  conribution-en.md  diary-en.md  diary.md  directory.md  extension.md  feature-en.md  feature.md  file-en.md  file.md  global-en.md  global.md  lambda.md  libraries-en.md  libraries.md  object.md  path-en.md  path.md  pointer-en.md  pointer.md  reflection-en.md  reflection.md  (+16 more)
src/: a.c  alignment.c  array.c  block.c  bool.c  buffer.c  buffer.h  byte.c  carray.c  cast.c  char.c  class_clover.c  class_clover_compile_time.c  class_clover_runtime.c  class_compiler.c  class_system.c  class_thread.c  clover2-buffer.h  clover2-debug.h  clover_to_clang.c  code.c  common.h  compiler.c  constant.c  debug.c  debug.h  dependency.c  exception.c  float.c  get_type.c  hash.c  heap.c  integer.c  interpreter.c  jit.cpp  jit.dwo  jit10.cpp  jit11.cpp  jit12.cpp  jit2.cpp  (+63 more)
src-c89/: alignment.c  array.c  block.c  bool.c  buffer.c  byte.c  carray.c  cast.c  char.c  class_clover.c  class_compiler.c  class_parser.c  class_system.c  clover_to_clang.c  code.c  compiler.c  constant.c  debug.c  exception.c  float.c  hash.c  heap.c  integer.c  interpreter.c  klass.c  klass_compile_time.c  list.c  long.c  main.c  method_compiler.c  module.c  native_method.c  node.c  node_block.c  node_block_type.c  node_type.c  object.c  parser.c  pointer.c  regex.c  (+11 more)
(+82 files in other folders)
